--- a/pages/index.css
+++ b/pages/index.css
@@ -33,6 +33,9 @@
 @import url(../blocks/menu__all-collect/menu-all-collect__cell.css);
 
 @import url(../blocks/header/__banner/header__banner.css);
+@import url(../blocks/header/__banner/header__banner_article.css);
 @import url(../blocks/header/__banner/header__banner_paragraph.css);
 @import url(../blocks/header/__banner/header__banner_subtitle.css);
 @import url(../blocks/header/__banner/header__banner_title.css);
+@import url(../blocks/header/__banner/header__banner_rect.css);
+@import url(../blocks/header/__banner/header__banner_button.css);
