--- a/blocks/header/__banner/header__banner_paragraph.css
+++ b/blocks/header/__banner/header__banner_paragraph.css
@@ -1,6 +1,6 @@
 .header__banner_paragraph {
     padding: 0;
-    margin: 0;
+    margin: 0 0 35px 0;
     font-family: 'Mulish';
     font-style: normal;
     font-weight: 600;
