--- a/pages/index.css
+++ b/pages/index.css
@@ -52,3 +52,12 @@
 @import url(../blocks/offers/__rect-list/offers__rect-list.css);
 
 @import url(../blocks/trending/trending.css);
+@import url(../blocks/trending/__top-menu/trending__top-menu.css);
+@import url(../blocks/trending/__cards/trending__cards.css);
+@import url(../blocks/trending/__cards/trending__card-item.css);
+@import url(../blocks/trending/__cards/trending__card-item_new.css);
+@import url(../blocks/trending/__cards/);
+@import url(../blocks/trending/__cards/trending__cards-item_img.css);
+@import url(../blocks/trending/__cards/trending__cards-item_name.css);
+@import url(../blocks/trending/__cards/trending__cards-item_title.css);
+@import url(../blocks/trending/__cards/trending__cards-item_prices.css);
