--- a/pages/index.css
+++ b/pages/index.css
@@ -61,3 +61,4 @@
 @import url(../blocks/trending/__cards/trending__cards-item_name.css);
 @import url(../blocks/trending/__cards/trending__cards-item_title.css);
 @import url(../blocks/trending/__cards/trending__cards-item_prices.css);
+@import url(../blocks/trending/__cards/trending__cards-item_stars.css);
