--- a/blocks/header/__banner/header__banner_button.css
+++ b/blocks/header/__banner/header__banner_button.css
@@ -12,9 +12,11 @@
     color: #FFFFFF;
     padding: 0;
     margin: 0;
+    transform: scale(1);
     transition: transform .2s ease-in;
 }
 
 .header__banner_button:hover {
     transform: scale(1.05);
+    transition: transform .2s ease-out;
 }
