--- a/pages/index.css
+++ b/pages/index.css
@@ -51,6 +51,8 @@
 @import url(../blocks/offers/__rect-img-xl/offers__rect-img-xl.css);
 @import url(../blocks/offers/__rect-list/offers__rect-list.css);
 
+@import url(../blocks/section-title/section-title.css);
+
 @import url(../blocks/trending/trending.css);
 @import url(../blocks/trending/__top-menu/trending__top-menu.css);
 @import url(../blocks/trending/__cards/trending__cards.css);
@@ -62,3 +64,9 @@
 @import url(../blocks/trending/__cards/trending__cards-item_title.css);
 @import url(../blocks/trending/__cards/trending__cards-item_prices.css);
 @import url(../blocks/trending/__cards/trending__cards-item_stars.css);
+
+@import url(../blocks/special-offer/special-offer.css);
+@import url(../blocks/special-offer/__card/special-offer__card.css);
+@import url(../blocks/special-offer/__card/special-offer__prices.css);
+@import url(../blocks/special-offer/__card/__button/special-offer__button.css);
+@import url(../blocks/special-offer/__timer/special-offer__timer.css);
