--- a/pages/index.css
+++ b/pages/index.css
@@ -70,3 +70,5 @@
 @import url(../blocks/special-offer/__card/special-offer__prices.css);
 @import url(../blocks/special-offer/__card/__button/special-offer__button.css);
 @import url(../blocks/special-offer/__timer/special-offer__timer.css);
+
+@import url(../blocks/our-products/our-products.css);
