--- a/pages/index.css
+++ b/pages/index.css
@@ -4,7 +4,7 @@
 
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
-@import url(../blocks/header/__top_rectangle/header__top-rectangle.css);
+/*@import url(../blocks/header/__top_rectangle/header__top-rectangle.css);*/
 @import url(../blocks/header/__welcome/header__welcome.css);
 @import url(../blocks/header/__login-sign-up/header__login-sign-up.css);
 @import url(../blocks/header/__login-sign-up/header__login.css);
