--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,7 @@
 
 @import url(../fonts/fonts.css);
 
-/*@import url(../blocks/page/page.css);
+@import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__top_rectangle/header__top-rectangle.css);
 @import url(../blocks/header/__welcome/header__welcome.css);
@@ -15,7 +15,7 @@
 
 @import url(../blocks/header/__shopping-cart/header__link.css);
 @import url(../blocks/header/__menu-user/header__menu-user.css);
-@import url(../blocks/header/__menu-icon/header__icon.css);*/
+@import url(../blocks/header/__menu-icon/header__icon.css);
 
 @import url(../blocks/search/search.css);
 @import url(../blocks/search/__button/search__button.css);
