--- a/blocks/top-menu/__cell/top-menu__cell.css
+++ b/blocks/top-menu/__cell/top-menu__cell.css
@@ -1,22 +1,10 @@
-.trending__top-menu {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    margin: 45px auto 73px;
-    width: 572px;
-}
-
-.trending__top-menu_cell {
+.top-menu__cell {
     padding: 0;
     margin: 0;
 }
 
-.trending__top-menu_cell:nth-child(2) {
-    margin: 0 70px;
-}
 
-.trending__top-menu_link_active {
+.top-menu__link_active {
     text-decoration: none;
     font-family: 'Mulish';
     font-style: normal;
@@ -27,12 +15,12 @@
     opacity: 1;
 }
 
-.trending__top-menu_link_active:hover {
+.top-menu__link_active:hover {
     transition: opacity .3s ease;
     opacity: .8;
 }
 
-.trending__top-menu_link {
+.top-menu__link {
     text-decoration: none;
     font-family: 'Mulish';
     font-style: normal;
@@ -43,7 +31,7 @@
     opacity: .8;
 }
 
-.trending__top-menu_link:hover {
+.top-menu__link:hover {
     opacity: 1;
     transition: opacity .3s ease;
 }
