--- a/pages/index.css
+++ b/pages/index.css
@@ -53,12 +53,17 @@
 
 @import url(../blocks/section-title/section-title.css);
 
+@import url(../blocks/top-menu/top-menu.css);
+@import url(../blocks/top-menu/__cell/top-menu__cell.css);
+
 @import url(../blocks/trending/trending.css);
-@import url(../blocks/trending/__top-menu/trending__top-menu.css);
+/*@import url(../blocks/trending/__top-menu/trending__top-menu.css);*/
 @import url(../blocks/trending/__cards/trending__cards.css);
 @import url(../blocks/trending/__cards/trending__card-item.css);
 @import url(../blocks/trending/__cards/trending__card-item_new.css);
 @import url(../blocks/trending/__cards/);
+@import url(../blocks/trending/__cards/__favorite/cards-item__favorite.css);
+@import url(../blocks/trending/__cards/__shop-card-icon/cards-item__shop-card-icon.css);
 @import url(../blocks/trending/__cards/trending__cards-item_img.css);
 @import url(../blocks/trending/__cards/trending__cards-item_name.css);
 @import url(../blocks/trending/__cards/trending__cards-item_title.css);
