--- a/blocks/cards/cards-item_name.css
+++ b/blocks/cards/cards-item_name.css
@@ -1,4 +1,4 @@
-.trending__cards-item_name {
+.cards-item_name {
     font-family: 'Mulish';
     font-style: normal;
     font-weight: 400;
@@ -7,7 +7,7 @@
     letter-spacing: 0.008em;
     text-transform: uppercase;
     color: rgba(117, 117, 117, 0.71);
-    margin: 280px 0 0 0;
+    margin: 280px 0 0 5px;
     padding: 0;
     height: 18px;
     width: 49px;
