--- a/blocks/cards/cards-item_stars.css
+++ b/blocks/cards/cards-item_stars.css
@@ -1,4 +1,4 @@
-.trending__cards-item_stars {
+.cards-item_stars {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -12,7 +12,7 @@
     opacity: .8;
 }
 
-.trending__cards-item_star {
+.cards-item_star {
     margin: 0 1px;
     padding: 0;
     height: 12.5px;
