--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -25,3 +25,8 @@
     font-family: 'Mulish';
     src: url(../fonts/Mulish-Regular.ttf);
 }
+
+@font-face {
+    font-family: 'DM Sans';
+    src: url(../fonts/DMSans-Regular.ttf);
+}
