--- a/pages/index.css
+++ b/pages/index.css
@@ -96,3 +96,4 @@
 @import url(../blocks/cards-big/__item/card-big__item.css);
 @import url(../blocks/cards-big/__item/card-big__img.css);
 @import url(../blocks/cards-big/__item/card-big__tag.css);
+@import url(../blocks/cards-big/__item/card-big__link.css);
