--- a/blocks/cards-big/__item/card-big__item.css
+++ b/blocks/cards-big/__item/card-big__item.css
@@ -1,8 +1,46 @@
 .card-big__item {
-    border: 1px solid red;
     height: 455px;
     width: 570px;
-    margin: 60px 0 0 0;
+    margin: 0;
     padding: 0;
     display: flex;
+    border-radius: 8px;
+    transition: transform .3s ease-in;
+    transform: scale(1);
+    will-change: transform;
+}
+
+.card-big__item:hover {
+    transform: scale(1.02);
+    transition: transform .3s ease-out;
+}
+
+.card-big__date {
+    position: absolute;
+    padding: 0;
+    margin: 253px 0 0 152px;
+    height: 17px;
+    width: 137px;
+    font-family: 'Mulish';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 130%;
+    letter-spacing: 0.008em;
+    color: #FFFFFF;
+}
+
+.card-big__title {
+    position: absolute;
+    padding: 0;
+    margin: 294px 0 0 44px;
+    width: 490.1px;
+    height: 75.88px;
+    font-family: 'Mulish';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 39px;
+    line-height: 120%;
+    letter-spacing: 0.005em;
+    color: #FFFFFF;
 }
