--- a/blocks/header/__banner/header__banner_button.css
+++ b/blocks/header/__banner/header__banner_button.css
@@ -14,6 +14,7 @@
     margin: 0;
     transform: scale(1);
     transition: transform .2s ease-in;
+    will-change: transform;
 }
 
 .header__banner_button:hover {
