--- a/blocks/cards-big/__item/card-big__link.css
+++ b/blocks/cards-big/__item/card-big__link.css
@@ -14,6 +14,7 @@
     text-decoration: none;
     opacity: .8;
     transition: opacity .2s ease;
+    will-change: transform;
 }
 
 .card-big__link:hover {
