--- a/blocks/footer/footer__link.css
+++ b/blocks/footer/footer__link.css
@@ -7,4 +7,11 @@
     letter-spacing: 0.01em;
     color: #555555;
     text-decoration: none;
+    opacity: .8;
+    transition: opacity .2s ease;
+}
+
+.footer__link:hover {
+    opacity: 1;
+    transition: opacity .2s ease;
 }
