--- a/pages/index.css
+++ b/pages/index.css
@@ -106,3 +106,6 @@
 @import url(../blocks/footer/footer__icon-social-bar.css);
 @import url(../blocks/footer/footer__link.css);
 @import url(../blocks/footer/footer__help.css);
+@import url(../blocks/footer/footer__store.css);
+@import url(../blocks/footer/footer__title.css);
+@import url(../blocks/footer/footer__support.css);
