--- a/pages/index.css
+++ b/pages/index.css
@@ -109,3 +109,4 @@
 @import url(../blocks/footer/footer__store.css);
 @import url(../blocks/footer/footer__title.css);
 @import url(../blocks/footer/footer__support.css);
+@import url(../blocks/footer/footer__regulations.css);
