--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,10 +1,20 @@
 .page {
     position: relative;
     width: 1440px;
-    height: 5730px;
+    height: 5715px;
     margin: 0 auto;
     background: #FFFFFF;
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: opacity .7s ease;
+}
+
+.loaded .page {
+    opacity: 1;
+}
+
+.loaded .loading {
+    opacity: 0;
+    transition: opacity .2s cubic-bezier(0.075, 1, 0.25, 1);
 }
