--- a/blocks/cards/__shop-card-icon/cards-item__shop-card-icon.css
+++ b/blocks/cards/__shop-card-icon/cards-item__shop-card-icon.css
@@ -14,20 +14,12 @@
     background-color: #95cf75;
 }
 
-/*.cards-item__shop-card-icon:link {
-    background-color: #d2fed4;
-}
-
-.cards-item__shop-card-icon:visited {
-    background-color: #74ba4e;
-}*/
-
 .cards-item__shop-card-icone:hover {
-    background-color: #97e16f;
+    background-color: #7AC751;
 }
 
 .cards-item__shop-card-icon:active {
-    background-color: #7AC751;
+    background-color: #70b34c;
     transform: scale(.92);
     box-shadow: 0 0 5px #65a443;
 }
